4.13
New Features:
* support for "above all" and "below all" layering states. To cofigure gloabl section
  was added string variable Layer
  Layer = None | Above | Below
* to speed start-up, panel does not have window icon, only configuator window has
* Control-Button3 click launches configureation dialog
* taskbar was changed to propagate Control-Button3 clicks to parent window i.e to panel

4.12
New Features:
* smooth icon theme change without panel reload
* autohide. Config section is part of 'Global' section
    autoHide = false
    heightWhenHidden = 2
* 3 sec delayed menu creation to improve start-up time

Fixed Bugs:
* icons, taskbar do not free all tasks when destroyed


4.11
Fixed Bugs:
* black background when no bg pixmap and transparency is unset

4.10
New Fetures:
* tclock: dclock was renamed to tclock = text clock
* dclock: digital blue clock. adopted from blueclock by
    Jochen Baier <email@Jochen-Baier.de>
* dclock: custom clock color can be set with 'color' option
  Plugin {
     type = dclock
     config {
         TooltipFmt = %A %x
         Action = xterm &
         color = wheat
     }
  }

* menu: items are sorted by name
* menu: icon size set to 22
* launchbar: drag-n-drop now accepts urls draged from web browsers
* style changes are grouped and only last of them is processed

Fixed Bugs:
* menu: forgoten g_free's were added
* 1723786: linkage problems with --as-needed flag
* 1724852: crash if root bg is not set
* WM_STATE usage is dropped. NET_WM_STATE is used instead. affected plugins are
  taskbar and pager
* fixed bug where pager used unupdated panel->desknum instead of pager->desknum
* all Cardinal vars were changed to guint from int
* bug in Makefile.common that generated wrong names in *.dep files
* style changes are grouped and only last of them is processed

4.9
* new menu placement to not cover panel; used in menu and taskbar
* taskbar: icons were added to task's menu (raise, iconify, close)